Add mailing list endpoint as well as component in the frontend
